Add simple JAR loading
- Add JAR loading to the console and strip examples from uneeded config

  Console supports now loading JAR-s with commands at startup from the specified directory.

- Remove node build from examples
- Extract age3-compute-api to separate module
- Add jar loading to TaskBuilder

  It is now possible to pass list of jars to add to the classpath when creating the WorkerConfiguration instance.

Fixes #48 and #49

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ hs_err_pid*
 *.iml
 *.log
 !/gradle/wrapper/gradle-wrapper.jar
+!/age3-core/src/test/resources/test-module-1.0.jar
 /gradle.properties
