Stabilize dependencies and set version to 0.6

--- a/age3-compute-api/build.gradle
+++ b/age3-compute-api/build.gradle
@@ -22,6 +22,6 @@ dependencies {
 		// Not needed and would introduce a lot of duplicated annotations
 		exclude group: 'net.sourceforge.findbugs'
 	}
-	compile 'org.jgrapht:jgrapht-core:+'
+	compile 'org.jgrapht:jgrapht-core:1.1.0'
 }
 
