--- a/age3-console/build.gradle
+++ b/age3-console/build.gradle
@@ -31,11 +31,11 @@ dependencies {
 	compile project(':age3-core')
 
 	compile 'com.hazelcast:hazelcast-client:default'
-	compile 'org.jline:jline:+'
+	compile 'org.jline:jline:3.7.0'
 
 	// JNA is needed for jline
-	runtime 'net.java.dev.jna:jna:+'
-	runtime 'org.fusesource.jansi:jansi:+'
+	runtime 'net.java.dev.jna:jna:4.5.1'
+	runtime 'org.fusesource.jansi:jansi:1.17.1'
 }
 
 shadowJar {
