DAAGER-10 basic daager data pulling application

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,8 +1,25 @@
-
-akka {
-
+play.http.secret.key = "changeme"
+play.filters.csrf.cookie.name = "DAAGER-TOKEN"
+play.filters.csrf.token.sign = false
+play.filters.cors {
+  pathPrefixes = ["/api"]
+  allowedOrigins = ["http://localhost:3000"]
+  allowedHttpMethods = ["GET", "POST", "PUT", "DELETE"]
+  allowedHttpHeaders = null
 }
-
 play.i18n {
   langs = [ "en" ]
 }
+apiPrefix = "api"
+daager {
+  pullInterval = 10
+}
+
+slick.dbs.default.profile="slick.jdbc.PostgresProfile$"
+slick.dbs.default.db {
+  driver="org.postgresql.Driver"
+  url = "jdbc:postgresql://localhost:5432/daager"
+  user = "postgres"
+  password = "postgres"
+}
+
