--- a/ui/package.json
+++ b/ui/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "proxy": "http://localhost:9000",
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "chart.js": "^2.7.2",
     "lodash": "^4.17.10",
     "react": "^16.3.2",
     "react-cookie": "^2.1.5",
@@ -13,8 +16,10 @@
     "react-progress-button": "^5.1.0",
     "react-router": "^4.2.0",
     "react-scripts": "1.1.4",
+    "react-sigma": "^1.2.30",
     "react-tabs": "^2.2.2",
-    "reactstrap": "^6.0.1"
+    "reactstrap": "^6.0.1",
+    "sigma": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
