--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,7 @@
 play.http.secret.key = "changeme"
 play.filters.csrf.cookie.name = "DAAGER-TOKEN"
 play.filters.csrf.token.sign = false
+play.filters.headers.contentSecurityPolicy = null
 play.filters.cors {
   pathPrefixes = ["/api"]
   allowedOrigins = ["http://localhost:3000"]
@@ -8,16 +9,16 @@ play.filters.cors {
   allowedHttpHeaders = null
 }
 play.i18n {
-  langs = [ "en" ]
+  langs = ["en"]
 }
 apiPrefix = "api"
 daager {
   pullInterval = 10
 }
 
-slick.dbs.default.profile="slick.jdbc.PostgresProfile$"
+slick.dbs.default.profile = "slick.jdbc.PostgresProfile$"
 slick.dbs.default.db {
-  driver="org.postgresql.Driver"
+  driver = "org.postgresql.Driver"
   url = "jdbc:postgresql://localhost:5432/daager"
   user = "postgres"
   password = "postgres"
