--- a/ui/package.json
+++ b/ui/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^16.3.2",
     "react-progress-button": "^5.1.0",
     "react-router": "^4.2.0",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.0.4",
     "react-sigma": "^1.2.30",
     "react-tabs": "^2.2.2",
     "reactstrap": "^6.0.1",
@@ -30,5 +30,11 @@
   "devDependencies": {
     "ncp": "^2.0.0",
     "rimraf": "^2.6.2"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
