--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,14 @@ services:
     depends_on:
       - db
       - vis
+    restart: on-failure
 
   vis:
     build: ./dependencies/grafana
     networks:
       - daager
     ports:
-    - "3001:3000"
+      - "3001:3000"
     depends_on:
       - db
 
@@ -30,5 +31,7 @@ services:
       - daager
     volumes:
       - ./timescale:/var/lib/postgresql
+
 networks:
   daager:
+
