DAAGER-30 adding formatter + fixing logger + fixing status/config info

--- a/dependencies/grafana/Dockerfile
+++ b/dependencies/grafana/Dockerfile
@@ -3,4 +3,4 @@ FROM grafana/grafana
 EXPOSE 3000/tcp
 
 ADD grafana.ini /etc/grafana/grafana.ini
-ADD --chown=777 grafana.db /var/lib/grafana/grafana.db
+ADD --chown=grafana grafana.db /var/lib/grafana/grafana.db
