--- a/dependencies/grafana/grafana.ini
+++ b/dependencies/grafana/grafana.ini
@@ -4,10 +4,10 @@
 # change
 
 # possible values : production, development
-;app_mode = production
+app_mode = production
 
 # instance name, defaults to HOSTNAME environment variable value or hostname if HOSTNAME var is empty
-;instance_name = ${HOSTNAME}
+instance_name = DAAGER
 
 #################################### Paths ####################################
 [paths]
@@ -94,7 +94,7 @@ enable_gzip = true
 ;conn_max_lifetime = 14400
 
 # Set to true to log the sql calls and execution times.
-log_queries =
+# log_queries =
 
 #################################### Session ####################################
 [session]
@@ -165,12 +165,12 @@ disable_gravatar = true
 ;data_source_proxy_whitelist =
 
 # disable protection against brute force login attempts
-;disable_brute_force_login_protection = false
+disable_brute_force_login_protection = true
 
 #################################### Snapshots ###########################
 [snapshots]
 # snapshot sharing options
-;external_enabled = true
+;external_enabled = false
 ;external_snapshot_url = https://snapshots-origin.raintank.io
 ;external_snapshot_name = Publish to snapshot.raintank.io
 
@@ -180,7 +180,7 @@ disable_gravatar = true
 #################################### Dashboards History ##################
 [dashboards]
 # Number dashboard versions to keep (per dashboard). Default: 20, Minimum: 1
-;versions_to_keep = 20
+versions_to_keep = 2
 
 #################################### Users ###############################
 [users]
@@ -208,7 +208,7 @@ default_theme = dark
 ;external_manage_info =
 
 # Viewers can edit/inspect dashboard settings in the browser. But not save the dashboard.
-;viewers_can_edit = false
+viewers_can_edit = true
 
 [auth]
 # Set to true to disable (hide) the login form, useful if you use OAuth, defaults to false
@@ -220,13 +220,13 @@ default_theme = dark
 #################################### Anonymous Auth ##########################
 [auth.anonymous]
 # enable anonymous access
-;enabled = false
+enabled = true
 
 # specify organization name that should be used for unauthenticated users
-;org_name = Main Org.
+org_name = AGH
 
 # specify role for unauthenticated users
-;org_role = Viewer
+org_role = Viewer
 
 #################################### Github Auth ##########################
 [auth.github]
@@ -373,9 +373,9 @@ default_theme = dark
 #################################### Alerting ############################
 [alerting]
 # Disable alerting engine & UI features
-;enabled = true
+enabled = true
 # Makes it possible to turn off alert rule execution but alerting UI is visible
-;execute_alerts = true
+execute_alerts = false
 
 #################################### Internal Grafana Metrics ##########################
 # Metrics available at HTTP API Url /metrics
