--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap-table": "^4.3.1",
     "react-cookie": "^2.1.5",
     "react-dom": "^16.3.2",
+    "react-dropdown": "^1.6.2",
     "react-progress-button": "^5.1.0",
     "react-router": "^4.2.0",
     "react-scripts": "^2.0.4",
